force-app/main/default/objects/Contact/fields/Relation_to_BIAV__c.field-meta.xml
<CustomField>
    <fullName>Relation_to_BIAV__c</fullName>
    <label>Relation to BIAV</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>BIAV Resource Directory</fullName>
            </value>
            <value>
                <fullName>Camper</fullName>
            </value>
            <value>
                <fullName>Camper Not Eligible</fullName>
            </value>
            <value>
                <fullName>Camp Staff/ Volunteer</fullName>
            </value>
            <value>
                <fullName>Conference</fullName>
            </value>
            <value>
                <fullName>Current Board Member</fullName>
            </value>
            <value>
                <fullName>Donor</fullName>
            </value>
            <value>
                <fullName>Event Volunteer</fullName>
            </value>
            <value>
                <fullName>Family/Friend of PWBI</fullName>
            </value>
            <value>
                <fullName>Field Day</fullName>
            </value>
            <value>
                <fullName>Former Board Member</fullName>
            </value>
            <value>
                <fullName>Golf</fullName>
            </value>
            <value>
                <fullName>I &amp; R</fullName>
            </value>
            <value>
                <fullName>Legislative Advocate</fullName>
            </value>
            <value>
                <fullName>Member</fullName>
            </value>
            <value>
                <fullName>Professional</fullName>
            </value>
            <value>
                <fullName>Support Group Facilitator</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>