force-app/main/default/objects/Contact/fields/Segmentation__c.field-meta.xml
<CustomField>
    <fullName>Segmentation__c</fullName>
    <label>Segmentation</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>BIAV Staff</fullName>
            </value>
            <value>
                <fullName>Board-Current</fullName>
            </value>
            <value>
                <fullName>Board-Former</fullName>
            </value>
            <value>
                <fullName>Camp Donor</fullName>
            </value>
            <value>
                <fullName>Camper</fullName>
            </value>
            <value>
                <fullName>Camp Staff</fullName>
            </value>
            <value>
                <fullName>Caregiver</fullName>
            </value>
            <value>
                <fullName>Caregiver Forum</fullName>
            </value>
            <value>
                <fullName>Cmpr-Ineligible</fullName>
            </value>
            <value>
                <fullName>Conference-Making Headway</fullName>
            </value>
            <value>
                <fullName>Conference-Professionals</fullName>
            </value>
            <value>
                <fullName>Conference-Speaker</fullName>
            </value>
            <value>
                <fullName>Conference Sponsor/Exhibitor</fullName>
            </value>
            <value>
                <fullName>Directory</fullName>
            </value>
            <value>
                <fullName>Donor</fullName>
            </value>
            <value>
                <fullName>Family Member of PWBI</fullName>
            </value>
            <value>
                <fullName>Friend of PWBI</fullName>
            </value>
            <value>
                <fullName>Golf Participant</fullName>
            </value>
            <value>
                <fullName>Golf Sponsor</fullName>
            </value>
            <value>
                <fullName>Legacy Dinner Participant</fullName>
            </value>
            <value>
                <fullName>Legacy Dinner Sponsor</fullName>
            </value>
            <value>
                <fullName>Member-Current</fullName>
            </value>
            <value>
                <fullName>Member-Former</fullName>
            </value>
            <value>
                <fullName>Networking Event Participant</fullName>
            </value>
            <value>
                <fullName>Organizational Sponsor</fullName>
            </value>
            <value>
                <fullName>Professional</fullName>
            </value>
            <value>
                <fullName>PWBI</fullName>
            </value>
            <value>
                <fullName>Student</fullName>
            </value>
            <value>
                <fullName>Support Group Leader-Current</fullName>
            </value>
            <value>
                <fullName>Support Group Leader-Former</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>