force-app/main/default/objects/Contact/fields/Story_Comments__c.field-meta.xml
<CustomField>
    <fullName>Story_Comments__c</fullName>
    <description>Use this box to document when/how a personal story was used</description>
    <inlineHelpText>Use this box to document when/how a personal story was used</inlineHelpText>
    <label>Story Comments</label>
    <type>TextArea</type>
</CustomField>