force-app/main/default/objects/Contact/fields/Unmet_Needs__c.field-meta.xml
<CustomField>
    <fullName>Unmet_Needs__c</fullName>
    <label>Unmet Needs</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>N/A</fullName>
                <default>true</default>
                <label>N/A</label>
            </value>
            <value>
                <fullName>Community Support Services/ IADL</fullName>
            </value>
            <value>
                <fullName>Neurobehavioral Treatment</fullName>
            </value>
            <value>
                <fullName>Congregate Living Familiar w/ BI</fullName>
            </value>
            <value>
                <fullName>Transportation</fullName>
            </value>
            <value>
                <fullName>Case Management</fullName>
            </value>
            <value>
                <fullName>Clubhouse/ Day Program</fullName>
            </value>
            <value>
                <fullName>CSB Denied Services</fullName>
            </value>
            <value>
                <fullName>Subacute Rehab</fullName>
            </value>
            <value>
                <fullName>Provider Familiar w/ BI</fullName>
            </value>
            <value>
                <fullName>Culturally Competent Provider</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>