force-app/main/default/objects/Contact/fields/Volunteer_Interests__c.field-meta.xml
<CustomField>
    <fullName>Volunteer_Interests__c</fullName>
    <label>Volunteer Interests</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Administrative</fullName>
            </value>
            <value>
                <fullName>Events</fullName>
            </value>
            <value>
                <fullName>Camp</fullName>
            </value>
            <value>
                <fullName>Advocacy</fullName>
            </value>
            <value>
                <fullName>Research</fullName>
            </value>
            <value>
                <fullName>Advisory Board</fullName>
            </value>
            <value>
                <fullName>Speakers Bureau</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>