force-app/main/default/objects/Contact/fields/Volunteer_Lead_Source__c.field-meta.xml
<CustomField>
    <fullName>Volunteer_Lead_Source__c</fullName>
    <description>How did the person hear about volunteer opportunities with BIAV?</description>
    <label>Volunteer Lead Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>In-person</fullName>
            </value>
            <value>
                <fullName>BIAV Event</fullName>
            </value>
            <value>
                <fullName>Web</fullName>
            </value>
            <value>
                <fullName>Other Organization</fullName>
            </value>
            <value>
                <fullName>Phone</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>