force-app/main/default/objects/Contact/fields/Volunteer_Lead_Source_Details__c.field-meta.xml
<CustomField>
    <fullName>Volunteer_Lead_Source_Details__c</fullName>
    <description>How did the person learn about BIAV volunteer opportunities? Add details.</description>
    <label>Volunteer Lead Source Details</label>
    <type>TextArea</type>
</CustomField>