force-app/main/default/objects/Contact/fields/Who_does_PWBI_reside_with__c.field-meta.xml
<CustomField>
    <fullName>Who_does_PWBI_reside_with__c</fullName>
    <label>Who does PWBI reside with?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Alone</fullName>
            </value>
            <value>
                <fullName>Family</fullName>
            </value>
            <value>
                <fullName>Live-In Attendant</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Roommate(s)</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
                <default>true</default>
                <label>N/A</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>