force-app/main/default/objects/Contact/fields/Willing_to_Share_Story__c.field-meta.xml
<CustomField>
    <fullName>Willing_to_Share_Story__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If a contact is willing to share their story of how BIAV helped them, check this box</description>
    <label>Willing to Share Story</label>
    <type>Checkbox</type>
</CustomField>