force-app/main/default/objects/Contact/recordTypes/General_Contact.recordType-meta.xml
<RecordType>
    <fullName>General_Contact</fullName>
    <active>true</active>
    <description>Use this record type for contacts whose primary relationship to BIAV is that of a donor, or I&amp;R caller (not PWBI)</description>
    <label>General Contact</label>
</RecordType>