force-app/main/default/objects/Contact/recordTypes/PWBI.recordType-meta.xml
<RecordType>
    <fullName>PWBI</fullName>
    <active>true</active>
    <description>Use this record type for I&amp;R calls and campers to track BI information</description>
    <label>PWBI</label>
</RecordType>