force-app/main/default/objects/Contact/listViews/Activity_Constant_Contact.listView-meta.xml
<ListView>
    <fullName>Activity_Constant_Contact</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Mine</filterScope>
    <label>Activity-Constant Contact</label>
</ListView>