force-app/main/default/objects/Contact/listViews/All_Contacts_by_Segment.listView-meta.xml
<ListView>
    <fullName>All_Contacts_by_Segment</fullName>
    <columns>FULL_NAME</columns>
    <columns>Segmentation__c</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>If_other_describe__c</columns>
    <columns>CONTACT.SALUTATION</columns>
    <filterScope>Everything</filterScope>
    <label>All Contacts by Segment</label>
</ListView>