force-app/main/default/objects/Contact/listViews/Board_Members_Current.listView-meta.xml
<ListView>
    <fullName>Board_Members_Current</fullName>
    <columns>FULL_NAME</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>Segmentation__c</columns>
    <columns>If_other_describe__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Segmentation__c</field>
        <operation>includes</operation>
        <value>Board-Current</value>
    </filters>
    <label>Board Members - Current</label>
</ListView>