force-app/main/default/objects/Contact/listViews/Contacts_to_Share_Story.listView-meta.xml
<ListView>
    <fullName>Contacts_to_Share_Story</fullName>
    <columns>FULL_NAME</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>Willing_to_Share_Story__c</columns>
    <columns>Story_Comments__c</columns>
    <columns>CONTACT.CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Willing_to_Share_Story__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Contacts to Share Story</label>
</ListView>