force-app/main/default/objects/Contact/listViews/Copy_of_All_Contacts_by_Segment.listView-meta.xml
<ListView>
    <fullName>Copy_of_All_Contacts_by_Segment</fullName>
    <columns>FULL_NAME</columns>
    <columns>Segmentation__c</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>If_other_describe__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>npsp__HHId__c</field>
        <operation>equals</operation>
    </filters>
    <label>Clean up Org Contact to HH Acct/Affiliat</label>
</ListView>