force-app/main/default/objects/Contact/listViews/Copy_of_All_joint_Contacts_with_and.listView-meta.xml
<ListView>
    <fullName>Copy_of_All_joint_Contacts_with_and</fullName>
    <columns>FULL_NAME</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>Segmentation__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>FULL_NAME</field>
        <operation>contains</operation>
        <value>&quot; and &quot;</value>
    </filters>
    <label>All joint Contacts with &quot; and &quot;</label>
</ListView>