force-app/main/default/objects/Contact/listViews/Lead_Source_is_Mail_Chimp.listView-meta.xml
<ListView>
    <fullName>Lead_Source_is_Mail_Chimp</fullName>
    <columns>FULL_NAME</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CONTACT.LEAD_SOURCE</columns>
    <columns>Segmentation__c</columns>
    <filterScope>Everything</filterScope>
    <label>Lead Source is Mail Chimp</label>
</ListView>