force-app/main/default/objects/Contact/listViews/Memberships_New_or_Renewal.listView-meta.xml
<ListView>
    <fullName>Memberships_New_or_Renewal</fullName>
    <columns>FULL_NAME</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>npo02__LastMembershipOrigin__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>npo02__MembershipJoinDate__c</field>
        <operation>greaterThan</operation>
        <value>12/31/2019</value>
    </filters>
    <label>Memberships New or Renewal</label>
</ListView>