force-app/main/default/objects/Contact/listViews/segments_for_january_to_add.listView-meta.xml
<ListView>
    <fullName>segments_for_january_to_add</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>Segmentation__c</columns>
    <columns>CONTACT.CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CONTACT.CREATED_DATE</field>
        <operation>greaterThan</operation>
        <value>1/1/2019 12:00 AM</value>
    </filters>
    <label>Segments to add since jan 2019</label>
</ListView>