force-app/main/default/objects/Contact/listViews/Unsubscribed_Constant_Contact.listView-meta.xml
<ListView>
    <fullName>Unsubscribed_Constant_Contact</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CONTACT.EMAIL_OPT_OUT</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>Unsubscribed-Constant Contact</label>
</ListView>